tests/NormalTests/paczka2/big_fuzzy/79787991.err
Error in line 7: S390 S390 72,5
Error in line 11: S390 S25 19,8
Error in line 19: IakllYI6C S375 27,3
Error in line 16: Bfa3 A75 61,3
Error in line 25: IakllYI6C S390 5,8
Error in line 35: y9BM99O A75 63,13
Error in line 32: y9BM99O S390 98,7
Error in line 18: S390 S25 41,2
Error in line 39: y9BM99O A75 305,7
Error in line 40: S390 S390 59,5
Error in line 47: Xy50 A75 71,7
Error in line 45: S390 A75 45,9
Error in line 43: KRiS3b A75 0,0
Error in line 65: Xy50 S25 60,2
Error in line 57: y9BM99O S390 27,0
Error in line 73: KRiS3b S25 58,5
Error in line 81: KRiS3b S375 77,8
Error in line 62: S390 S375 101,7
Error in line 69: IakllYI6C S25 55,6
Error in line 93: KRiS3b S390 10,4
Error in line 99: Xy50 S25 306,9
Error in line 102: S390 S25 19,6
Error in line 104: y9BM99O S25 51,1
Error in line 109: S390 S375 33,7
Error in line 122: KRiS3b S375 65,04
Error in line 118: KRiS3b S375 84,9
Error in line 136: Bfa3 S390 99,1
Error in line 137: IakllYI6C S390 17,7
Error in line 138: S390 S375 17,4
Error in line 158: KRiS3b S25 65,5
Error in line 157: Bfa3 A75 31,8
Error in line 164: KRiS3b A75 79,86
Error in line 159: KRiS3b S375 81,2
Error in line 161: plUxlCr7P6G S375 60,4
Error in line 163: Bfa3 S390 30,4
Error in line 174: Bfa3 S25 81,4
Error in line 186: plUxlCr7P&G A75 20,5
Error in line 190: plUxlCr7P6G S25 62,0
Error in line 212: S390 S25 23,0
Error in line 213: plUxlCr7P6G S25 18,7
Error in line 214: S390 A75 7,1
Error in line 211: KRiS3b S25 23,1
Error in line 216: plUxlCr7P6G A75 39,8
Error in line 225: KRiS3b S390 230,1
Error in line 228: KRiS3b S375 74,1
Error in line 235: KRiS3b A75 1,8
